tests/src/frontend/syntax/invalid/yield_return.sk
fun yieldAndReturn(): mutable Iterator<Int> {
  if (false) {
    return void
  };
  yield 37
}

fun main(): void {
  void
}
